Simplify Buggi and Metakompas selection payloads